--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./public/style.css">
 </head>
 <body>
-    <H1>Enter your current city:</H1>
-    <form action="/" method="post">
-        <input type="text" name="cityName" >
-        <button type="submit">Go</button>
-    </form>
+    <div class="container">
+        <h1 class="text-center">Weather App</h1>
+        <div class="row justify-content-center">
+            <div class="col-sm-6">
+                <h2 class="text-center">Enter your current city:</h2>
+                <form class="text-center" action="/" method="post">
+                    <input class="form-control" type="text" name="cityName" placeholder="City Name">
+                    <button class="btn btn-primary mt-3" type="submit">Go</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
-</html> 
+</html>
