--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./public/style.css">
 </head>
-<body>
-    <div class="container">
-        <h1 class="text-center">Weather App</h1>
-        <div class="row justify-content-center">
+<body style="background-image: url(https://images.theconversation.com/files/442675/original/file-20220126-17-1i0g402.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1356&h=668&fit=crop);">
+    <div class="container" >
+        <h1 class="text-center" style="margin-top: 20%;">Weather App</h1>
+        <div class="row justify-content-center" >
             <div class="col-sm-6">
                 <h2 class="text-center">Enter your current city:</h2>
                 <form class="text-center" action="/" method="post">
